# Serial9bit

./: CMakeLists.txt  README.md  find_serialports.py  uart.c
C_code/SerialPortThreads/: CMakeLists.txt  Serial.c  Serial.h  main  main.c  receive.c  receive.h  send.c  send.h
C_code/Serial_Port_Testing_receive/: CMakeLists.txt  main.c
C_code/Serial_Port_Testing_receive2/: main.c
C_code/Serial_Port_Testing_send/: CMakeLists.txt  main.c
Refrence/: uart.h
Refrence/Python_code/: serial.py
SerialPortThreads/: CMakeLists.txt  Serial.c  Serial.h  main.c  receive.c  receive.h  send.c  send.h
